// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager exports "frodo config-manager export csp --directory configManagerExportCspDir1 -f test/e2e/fr-config-manager-pull-config/csp-overrides.json 1`] = `""`;

exports[`frodo config-manager exports "frodo config-manager export csp --directory configManagerExportCspDir1 -f test/e2e/fr-config-manager-pull-config/csp-overrides.json: configManagerExportCspDir1/csp/csp.json 1`] = `
{
  "enforced": {
    "active": {
      "$bool": "\${CSP_ENFORCED}",
    },
    "directives": {},
  },
  "report-only": {
    "active": {
      "$bool": "\${CSP_REPORT_ONLY}",
    },
    "directives": {
      "frame-ancestors": [
        "'self'",
      ],
      "script-src": [
        "'self'",
        "'unsafe-eval'",
        "'unsafe-inline'",
      ],
    },
  },
}
`;

exports[`frodo config-manager exports "frodo config-manager export csp -D configManagerExportCspDir0": should export the content security policy in fr-config manager style. 1`] = `""`;

exports[`frodo config-manager exports "frodo config-manager export csp -D configManagerExportCspDir0": should export the content security policy in fr-config manager style.: configManagerExportCspDir0/csp/csp.json 1`] = `
{
  "enforced": {
    "active": false,
    "directives": {},
  },
  "report-only": {
    "active": true,
    "directives": {
      "frame-ancestors": [
        "'self'",
      ],
      "script-src": [
        "'self'",
        "'unsafe-eval'",
        "'unsafe-inline'",
      ],
    },
  },
}
`;
